 multiplier_exe.apm        Locally Modified           18 
 switch2led_exe.apm        Locally Modified           18 
 echo_exe.apm              Locally Modified           18 

Directory config/pm/leap/examples/chipscope
 chipscope_hybrid_xup_v5_sata.apm Locally Modified           18 

Directory config/pm/leap/examples/devtest
 devtest_hybrid_exe.apm    Locally Modified           18 
 devtest_hybrid_htg.apm    Locally Modified           18 


* Update stale .apm files.

----------
mpellaue    Date: Thu Sep  8 16:48:32 EDT 2011  CSN: CSN-leap-examples-20
                  Thu Sep  8 20:48:32 UTC 2011


Directory config/pm/leap/examples/rrrtest
 rrrtest_hybrid_ml605d_xst.apm Locally Modified           19 


* Updating ML605 RRR test for updated platform.

----------
mcadler     Date: Sun Sep 25 20:12:27 EDT 2011  CSN: CSN-leap-examples-21
                  Mon Sep 26 00:12:27 UTC 2011


Directory modules/apps/examples/sata_to_pcie
 sata_to_pcie.bsv          Locally Modified           20 

Interface change to mkSizedBRAMFIFO().

----------
mcadler     Date: Fri Feb 17 00:06:59 EST 2012  CSN: CSN-leap-examples-22
                  Fri Feb 17 05:06:59 UTC 2012


Directory config/pm/leap/examples
 stdio/                    Locally Added               0 

Directory config/pm/leap/examples/stdio
 stdio_example_hybrid_exe.apm Locally Added               0 

Directory modules/apps/examples
 stdio/                    Locally Added               0 

Directory modules/apps/examples/stdio
 stdio-example.awb         Locally Added               0 
 stdio-example.bsv         Locally Added               0 
 README                    Locally Added               0 

Relatively simple example of writing and reading using StdIO.

----------
mcadler     Date: Fri Feb 17 08:17:01 EST 2012  CSN: CSN-leap-examples-23
                  Fri Feb 17 13:17:01 UTC 2012


Directory modules/apps/examples/stdio
 stdio-example.bsv         Locally Modified           22 

Get rid of compiler warnings.