@@ -6,5 +6,5 @@ Lock=asim-leap-examples
 Description=Description of leap-examples
 Name=leap-examples
 Tag=HEAD
-CSN=CSN-leap-examples-23
+CSN=CSN-leap-examples-24
 Dependencies=leap/HEAD
