@@ -20,10 +20,9 @@ class TEST_ITERATIONS_SWITCH_CLASS : public COMMAND_SWITCH_INT_CLASS
     {};
 
     void ProcessSwitchInt(int arg) { testIter = arg; };
-    bool ShowSwitch(char *buff)
+    void ShowSwitch(std::ostream& ostr, const string& prefix)
     {
-        strcpy(buff, "[--test-iterations=<n>] RRR test iterations");
-        return true;
+        ostr << prefix << "[--test-iterations=<n>] RRR test iterations" << endl;
     };
 
     int Value(void) const { return testIter; }
@@ -43,10 +42,9 @@ class LONG_TESTS_SWITCH_CLASS : public COMMAND_SWITCH_INT_CLASS
     {};
 
     void ProcessSwitchInt(int arg) { longTests = arg; };
-    bool ShowSwitch(char *buff)
+    void ShowSwitch(std::ostream& ostr, const string& prefix)
     {
-        strcpy(buff, "[--long-tests=<n>]      RRR long tests if non-zero");
-        return true;
+        ostr << prefix << "[--long-tests=<n>]      RRR long tests if non-zero" << endl;
     };
 
     int Value(void) const { return longTests; }
