@@ -656,3 +656,13 @@ Directory modules/apps/examples/stdio
  stdio-example.bsv         Locally Modified           22 
 
 Get rid of compiler warnings.
+
+----------
+mcadler     Date: Sun Jul 29 14:33:02 EDT 2012  CSN: CSN-leap-examples-24
+                  Sun Jul 29 18:33:02 UTC 2012
+
+
+Directory modules/apps/examples/rrrtest
+ rrrtest.h                 Locally Modified           23 
+
+Update for new --help argument interface.
